--- a/src/index.scss
+++ b/src/index.scss
@@ -52,13 +52,17 @@ body {
 }
 
 .crd {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 800px;
-    height: 300px;
+    height: 450px;
     background-color: white;
     border-radius: 40px;
     padding: 30px;
     margin-top: 20px;
-    box-shadow: #212529;
+    box-shadow: 0 0 100px rgba(255, 118, 118, 0.5);
 }
 
 .active {
@@ -78,7 +82,7 @@ body {
 
 .richard {
     display: flex;
-    height: 300px;
+    height: 400px;
     width: 40%;
     background-color: rgb(103, 103, 225);
     border-radius: 40px;
@@ -88,7 +92,7 @@ body {
 .img {
     border: 1px solid black;
     border-radius: 30px;
-    width: 200px;
+    width: 300px;
     height: 200px;
     margin: 20px;
     background-color: white;
@@ -97,13 +101,14 @@ body {
 .speaker {
     display: flex;
     margin-left: 100px;
+    align-items: center;
 }
 
 .richardRight {
     display: flex;
     flex-wrap: wrap;
     flex-basis: auto;
-    width: 60%;
+    width: 100%;
     padding: 1rem;
     img {
         width: 200px;
@@ -235,6 +240,11 @@ body {
 
 .divider {
     margin: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.modalIn {
     display: flex;
     justify-content: center;
 }
