--- a/src/index.scss
+++ b/src/index.scss
@@ -250,3 +250,12 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.inputFile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+}
